fixed scrollbar for tracklist

--- a/src/app/videoLyrics/_trackList.scss
+++ b/src/app/videoLyrics/_trackList.scss
@@ -5,4 +5,17 @@
   background: rgba(255, 255, 255, 0.5);
   padding: 1rem;
   max-width: 300px;
+  
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 12px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: rgb(0, 0, 0);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgb(50, 50, 50);
+  }
 }
